test/resources/valid/ValidWithComplicatedImports.flo
import './ImportAImportsC' as ImportA;
import './ImportBImportsC' as ImportB;

action ENOUGH_USERS_ONLINE = toggle();

flow USERS = {
    array users = [];
    boolean enoughUsersOnline = false;
    ImportA.GET_ALL_USERS >> users;
    ImportB.UPDATE_USER >> users;
    ENOUGH_USERS_ONLINE >> enoughUsersOnline;
}